app/src/main/java/com/example/ecommerce/core/errors/FailureException.kt
package com.example.ecommerce.core.errors

class FailureException (message:String) : RuntimeException(message)